--- a/Tracker/Localization/en.lproj/Localizable.strings
+++ b/Tracker/Localization/en.lproj/Localizable.strings
@@ -39,6 +39,7 @@ CREATE_HABIT_COLLECTION_VIEW_FIRST_HEADER = "Emoji";
 CREATE_HABIT_COLLECTION_VIEW_SECOND_HEADER = "Color";
 CREATE_HABIT_BUTTON_TITLE = "Create";
 EDIT_HABIT_BUTTON_TITLE = "Save";
+CANCEL_HABIT_BUTTON_TITLE = "Cancel";
 
 //MARK: Categories view
 CATEGORIES_HEADER_LABEL = "Category";
