--- a/Tracker/Localization/ru.lproj/Localizable.strings
+++ b/Tracker/Localization/ru.lproj/Localizable.strings
@@ -39,6 +39,7 @@ CREATE_HABIT_COLLECTION_VIEW_FIRST_HEADER = "Emoji";
 CREATE_HABIT_COLLECTION_VIEW_SECOND_HEADER = "Цвет";
 CREATE_HABIT_BUTTON_TITLE = "Создать";
 EDIT_HABIT_BUTTON_TITLE = "Сохранить";
+CANCEL_HABIT_BUTTON_TITLE = "Отменить";
 
 //MARK: Categories view
 CATEGORIES_HEADER_LABEL = "Категория";
